changed URLs brainvisa.fr -> brainvisa.info
git-svn-id: https://bioproj.extra.cea.fr/neurosvn/brainvisa/brainvisa-installer/trunk@71422 613412ce-1361-4b7a-93bf-a3c75af1bae4

--- a/www/download.html
+++ b/www/download.html
@@ -160,19 +160,19 @@
 				   <tbody>			   
 						<tr>
 							<td>Linux (64 bits)</td>
-							<td style="text-align:left;"><code>http://brainvisa.fr/repositories/linux64</code></td>
+							<td style="text-align:left;"><code>http://brainvisa.info/repositories/linux64</code></td>
 						</tr>
 						<tr>
 							<td>Linux (32 bits)</td>
-							<td style="text-align:left;"><code>http://brainvisa.fr/repositories/linux32</code></td>
+							<td style="text-align:left;"><code>http://brainvisa.info/repositories/linux32</code></td>
 						</tr>
 						<tr>
 							<td>Mac OS X (>= 10.5)</td>
-							<td style="text-align:left;"><code>http://brainvisa.fr/repositories/osx</code></td>
+							<td style="text-align:left;"><code>http://brainvisa.info/repositories/osx</code></td>
 						</tr>
 						<tr>
 							<td>Windows (32 bits)</td>
-							<td style="text-align:left;"><code>http://brainvisa.fr/repositories/win32</code></td>
+							<td style="text-align:left;"><code>http://brainvisa.info/repositories/win32</code></td>
 						</tr>
 					</tbody>
 				</table>
